sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:15: error: ')' expected but $XMLSTART$< found.
      if (getValue(j) <min) {
                      ^AlgSelectionSort:19: error: illegal start of simple expression
    }
    ^